--- a/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
@@ -211,7 +211,7 @@ spec:
           revision: 3
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
-            - { name: VAR_REPLICATIONDESTNAME, value: '.*-bootstrap'}
+            - { name: VAR_REPLICATIONDESTNAME, value: '.*-dst'}
     sidecar:
       dashboards:
         enabled: true
