feat: revert until next rebuild

--- a/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
@@ -331,7 +331,7 @@ spec:
           revision: 3
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
-            - { name: VAR_REPLICATIONDESTNAME, value: '.*-dst'}
+            - { name: VAR_REPLICATIONDESTNAME, value: '.*-bootstrap'}
       system:
         node-exporter-full:
           # renovate: depName="Node Exporter Full"
