--- a/kubernetes/main/templates/volsync/claim.yaml
+++ b/kubernetes/main/templates/volsync/claim.yaml
@@ -10,7 +10,7 @@ spec:
   dataSourceRef:
     kind: ReplicationDestination
     apiGroup: volsync.backube
-    name: "${APP}-dst"
+    name: "${APP}-bootstrap"
   resources:
     requests:
       storage: "${VOLSYNC_CAPACITY:-2Gi}"
