--- a/kubernetes/main/templates/volsync/nfs.yaml
+++ b/kubernetes/main/templates/volsync/nfs.yaml
@@ -23,7 +23,7 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationDestination
 metadata:
-  name: "${APP}-dst"
+  name: "${APP}-bootstrap"
 spec:
   trigger:
     manual: restore-once
