--- a/kubernetes/utility/templates/volsync/minio.yaml
+++ b/kubernetes/utility/templates/volsync/minio.yaml
@@ -28,7 +28,7 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationDestination
 metadata:
-  name: "${APP}-dst"
+  name: "${APP}-bootstrap"
 spec:
   trigger:
     manual: restore-once
