feat(terraform): refactor so I can plan in GHA

--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/secret.sops.yaml
@@ -2,13 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: terraform-minio-secret
+    name: terraform-bitwarden-secret
 stringData:
     bw_access_token: ENC[AES256_GCM,data:4J7q7em3vzRXUD9qSEgEH2SUKhpu/43eJTs+fHrW0jtQeFYdm8cDMweUzU0b4NMBKdxKlm5kyEDAGhl8IujXzmEpAH9XxTFl9WlREi6cBqW5tJhXwK4180WXET/irA==,iv:rvaA3HOtCiD1XtJ1bwrcQIJwtwBDNx9ZNqOH22S70vU=,tag:KRV6VOvwW9MQ2uKMcuwrdw==,type:str]
-    bw_minio_secret_id: ENC[AES256_GCM,data:ofnRALko3kOKl+S8MkDM4WbfiekixwGPBnoA3eXHdVg6lGgW,iv:75761bCQZ8nRMnl1QQPs4jma2mxxixmTHleTnRXdj2g=,tag:+FKOlYm1opITEuciYJd2JA==,type:str]
-    bw_org_id: ENC[AES256_GCM,data:uNqWpq3KeH/JESQme0jW1e3jaicDGh6uY1EaJUrx+Xhscriz,iv:mq0QxH4mANuf3ZJ0V5QRwj6vWgAK7SNKYmmbNPd9kkU=,tag:993WCD3M694DVkanNFnv+w==,type:str]
-    bw_proj_id: ENC[AES256_GCM,data:oiE/NHGTk9UHbFFRa119SV/NfbJ5xnngwCUDh3o/asniU55b,iv:vZo97Xbf9TMu460GempDeUXrMeivG7KwpduOMTzbSNo=,tag:jne6WbL6E4mFJ2g2vh8JJw==,type:str]
-    minio_url: ENC[AES256_GCM,data:AQ/2kASUhYObB8s=,iv:L3c1Q5T1LaUJsH+y0rZLkmisb4cIWxDD+XTmT69s9kA=,tag:f0Uvab3MPBC7toVYnt/cZQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +20,8 @@ sops:
             KzRDbWFsVEpsalByQ1pKL2VsbHZuaTQKKQ+Ia4b12/kVhKvypUlf/riQuTQFh9zy
             T/Lp0g6o1eW7KoE+tFk9QgPGYLphyXn/iVNWpz+bMTXhcgFL0qTQZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-09T19:36:42Z"
-    mac: ENC[AES256_GCM,data:PZkVaRSexv8Q/gsMyAnjbWXwb4OJuRQzUWZox+5q53dIQbyrAPxKIBmqiXHMaMSuPWgLAzosn3IJMPQF3HzdEmJ5VvJnAbqgqlW6rrhwI/3Y8R37coprmP6TLdBkHoU87Ck1Uugq/uS4vAdH0+ujNJIgQK+RSmMhkiDl2bg8cRw=,iv:vwqLpb/BWDq4CNdj83bkMMi0ymqYtoCBK7YSlBzNj5I=,tag:GGjzjan6TIeBSyxnpZiJ6g==,type:str]
+    lastmodified: "2024-11-06T17:35:52Z"
+    mac: ENC[AES256_GCM,data:kqWaREkuYkNWTx33DEtMjT+Krj1MqmeU73KWN57cLTcYqNo8SmMfugqscy1TwhOOOYO7yocOb6/GnxzdPvev9pGf+7AOG5Nvl+KeUZbltG903NL0n2XxLk+RQ95hx5fH5roAlIFCNYKN37aY8XFU+WZ+SJPWnYkeWzzjsWAz640=,iv:zGl4TEf9DnJBhTp1gY+cXZr/TYGjx44ZuIC97DLztsg=,tag:V7bjt1/qWl+cx5v2Dw7D3Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
