--- a/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/terraform/minio.yaml
@@ -30,4 +30,4 @@ spec:
     namespace: flux-system
   varsFrom:
   - kind: Secret
-    name: terraform-minio-secret
+    name: terraform-bitwarden-secret
