--- a/.github/workflows/tf-diff.yaml
+++ b/.github/workflows/tf-diff.yaml
@@ -10,7 +10,7 @@
   jobs:
     sync:
       name: Terraform plan
-      runs-on: ubuntu-latest
+      runs-on: ["gha-runner-scale-set"]
       strategy:
         matrix:
           environment: [authentik, minio]
