--- a/.github/workflows/tf-diff.yaml
+++ b/.github/workflows/tf-diff.yaml
@@ -38,6 +38,13 @@
             token: ${{ steps.app-token.outputs.token }}
             fetch-depth: 0
 
+        - name: Setup Homebrew
+          uses: Homebrew/actions/setup-homebrew@master
+
+        - name: Setup Workflow Tools
+          shell: bash
+          run: brew install node
+
         - name: Setup terraform
           uses: hashicorp/setup-terraform@v3
 
