--- a/.github/workflows/lychee.yaml
+++ b/.github/workflows/lychee.yaml
@@ -31,28 +31,28 @@ jobs:
         uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: "${{ env.BOT_APP_ID }}"
-          private-key: "${{ env.BOT_APP_PRIVATE_KEY }}"
+          app-id: ${{ env.BOT_APP_ID }}
+          private-key: ${{ env.BOT_APP_PRIVATE_KEY }}
 
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Scan for broken links
         uses: lycheeverse/lychee-action@v2
         id: lychee
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          token: ${{ steps.app-token.outputs.token }}
           args: --verbose --no-progress --exclude-mail './**/*.md'
-          output: "${{ env.LYCHEE_OUTPUT }}"
+          output: ${{ env.LYCHEE_OUTPUT }}
           debug: true
 
       - name: Find Link Checker Issue
         id: find-issue
         shell: bash
         env:
-          GH_TOKEN: "${{ steps.app-token.outputs.token }}"
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           issue_number=$( \
               gh issue list \
@@ -67,7 +67,7 @@ jobs:
       - name: Create or Update Issue
         uses: peter-evans/create-issue-from-file@v5
         with:
-          token: "${{ steps.app-token.outputs.token }}"
-          title: "${{ env.WORKFLOW_ISSUE_TITLE }}"
-          issue-number: "${{ steps.find-issue.outputs.issue-number || '' }}"
-          content-filepath: "${{ env.LYCHEE_OUTPUT }}"
+          token: ${{ steps.app-token.outputs.token }}
+          title: ${{ env.WORKFLOW_ISSUE_TITLE }}
+          issue-number: ${{ steps.find-issue.outputs.issue-number || '' }}
+          content-filepath: ${{ env.LYCHEE_OUTPUT }}
