--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -33,13 +33,13 @@ jobs:
         uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: "${{ env.BOT_APP_ID }}"
-          private-key: "${{ env.BOT_APP_PRIVATE_KEY }}"
+          app-id: ${{ env.BOT_APP_ID }}
+          private-key: ${{ env.BOT_APP_PRIVATE_KEY }}
 
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -62,12 +62,12 @@ jobs:
         id: kubeconfig
         uses: timheuer/base64-to-file@v1
         with:
-          encodedString: "${{ env.KUBECONFIG }}"
+          encodedString: ${{ env.KUBECONFIG }}
           fileName: kubeconfig
 
       - name: Download and run crd-extractor
         env:
-          KUBECONFIG: "${{ steps.kubeconfig.outputs.filePath }}"
+          KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
         shell: bash
         run: |
           curl -fsSL -o $GITHUB_WORKSPACE/crd-extractor.sh \
@@ -78,7 +78,7 @@ jobs:
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: "${{ env.CLOUDFLARE_API_KEY }}"
-          accountId: "${{ env.CLOUDFLARE_ACCOUNT_ID }}"
+          apiToken: ${{ env.CLOUDFLARE_API_KEY }}
+          accountId: ${{ env.CLOUDFLARE_ACCOUNT_ID }}
           workingDirectory: /home/runner/.datree/crdSchemas
           command: pages deploy --project-name=kube-schemas --branch main .
