--- a/.github/renovate/packageRules.json5
+++ b/.github/renovate/packageRules.json5
@@ -18,6 +18,13 @@
       "matchDatasources": ["docker"],
       "versioning": "regex:^version-\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$",
       "matchPackagePatterns": ["mylar3"]
+    },
+    {
+      "description": ["Process terraform files"],
+      "matchManagers": ["terraform"],
+      "matchDatasources": ["terraform-provider"],
+      "versioning": "terraform",
+      "matchPackagePatterns": [".*"]
     }
   ]
 }
