--- a/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
@@ -58,7 +58,7 @@ spec:
       type: Opaque
       data:
         POSTGRES_DB: '{{ .dbname }}'
-        POSTGRES_SERVER: '{{ .host }}'
+        POSTGRES_SERVER: '{{ index . "pgbouncer-host" }}'
         POSTGRES_PORT: '{{ .port }}'
         POSTGRES_USER: '{{ .user }}'
         POSTGRES_PASSWORD: '{{ .password }}'
