--- a/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
@@ -198,7 +198,7 @@ spec:
           app:
             image:
               repository: ghcr.io/zoriya/kyoo_transcoder
-              tag: edge@sha256:d81bcebc132f68b728e771dd70575bde5e2edc9b2bec1927e79a0419fc139e6c
+              tag: 4.7.0@sha256:6dc3d64f241bb83c698fd6457198f66071f672c778a0bce48c1a90e9e3bef73a
             envFrom: *envFrom
             resources:
               requests:
