--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # Flux-Kustomizations
   - ./kavita/ks.yaml
   - ./komga/ks.yaml
-  - ./kyoo/ks.yaml
+  # - ./kyoo/ks.yaml
   - ./maintainerr/ks.yaml
   - ./overseerr/ks.yaml
   - ./plex/ks.yaml
