--- a/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
@@ -98,12 +98,12 @@ spec:
                   name: kyoo-secret
             image:
               repository: ghcr.io/zoriya/kyoo_migrations
-              tag: edge@sha256:f9c5a97dea3af15b129a88ab244928114ec7981c62e8442c7fac0e81c6d80adc
+              tag: 4.7.0@sha256:564c05b0c166c8f20ad52382dc1adf64170274183a154dcefc9ff613c4424a18
         containers:
           app:
             image:
               repository: ghcr.io/zoriya/kyoo_back
-              tag: edge@sha256:030d1b6fe870cd2864027822b265e1a0b28833fb2a2af51d5b54cbc54b4b6a88
+              tag: 4.7.0@sha256:2a04796840d0d448973ac22046f2b43c70c8667dd2c7c7124332d5dd23d6ffe5
             env:
               TRANSCODER_URL: http://kyoo-transcoder:7666
             envFrom: *envFrom
@@ -126,7 +126,7 @@ spec:
           app:
             image:
               repository: ghcr.io/zoriya/kyoo_front
-              tag: edge@sha256:57b82f30899adf49bdaef07755391d3b63a33c5fce67644de8f58b9120de9264
+              tag: 4.7.0@sha256:4907a5208e2a7cf357c7d40164b90ebc22d956db87b77f179bc91bbcf28aae55
             envFrom: *envFrom
             resources:
               requests:
@@ -144,7 +144,7 @@ spec:
           app:
             image:
               repository: &scannerimage ghcr.io/zoriya/kyoo_scanner
-              tag: &scannertag edge@sha256:92279694b8a00f90295f3acd5124a130c83d8560e60803ac6fc96572ec153b05
+              tag: &scannertag 4.7.0@sha256:38daf3226b3884a2fb91e597f4061556b897a54bb418cf0b0519c426bcdb66b1
             envFrom: *envFrom
             resources:
               requests:
