feat: add etcd-storage dashboard

--- a/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
@@ -301,6 +301,11 @@ spec:
           revision: 9
           datasource: Prometheus
       storage:
+        etcd-storage:
+          # renovate: depName="etcd"
+          gnetId: 22236
+          revision: 1
+          datasource: Prometheus
         ceph-cluster:
           # renovate: depName="Ceph Cluster"
           gnetId: 2842
