feat: bypass cloudflared

--- a/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/helmrelease.yaml
@@ -81,8 +81,8 @@ spec:
       app:
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: external-utility.${SECRET_DOMAIN}
-          # websockets?
+          external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN},external-utility.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
           nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
           nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
         hosts:
