--- a/kubernetes/utility/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/utility/flux/vars/cluster-secrets.sops.yaml
@@ -18,6 +18,7 @@ stringData:
     SVC_MQTT_ADDR: ENC[AES256_GCM,data:JLe9yBBRNm4rQ3Y=,iv:35bLdpiBgXNeWPMYpAY6ehGBQVeZh3HZpMMyzXeqq0I=,tag:AaH6B2ycs0ZZARXGaYuu+g==,type:str]
     SVC_NUT_ADDR: ENC[AES256_GCM,data:tEIaufwqT5HKSxM=,iv:xhDAE0DVNBUDj/DemkUNiid6qP6tCZF/SsAXtUDO+tw=,tag:IikhIvRi5MsWZPKJYpXAig==,type:str]
     TAILNET_PUBLIC_PORT: ENC[AES256_GCM,data:sMOc9IY=,iv:fGl13lVSOijceCM7ujHZrGEFSfHPm1P1WYwiZgdK/lw=,tag:FX3xAwL7QHBWKDOFQ2UNZw==,type:str]
+    SVC_HEADSCALE_ADDR: ENC[AES256_GCM,data:Rb04G/9UHKJ8Ecs=,iv:8jAN5sPRxvoWqcEyvojj8Pl/ztZnmw8saaJjObJM51o=,tag:G7m+POraYXocuv04wJpqoA==,type:str]
     SVC_TAILSCALE_ADDR: ENC[AES256_GCM,data:O8m6zwAApPd/,iv:O0y5l0+HcYClufGf/SUSCnL4eurTkxbuYSJ2eKFDUxk=,tag:MEe3XDC/uORC7ExLxR86RQ==,type:str]
     #ENC[AES256_GCM,data:WjKHI92l3ZdKMCM5,iv:6dmuNxxo3TeNZ2J1tsAC3Op2ZCJjwNQro3XMz3+Smgs=,tag:a6mVn8a4UaVUb8KKW9+kYQ==,type:comment]
     TRUSTED_LVAN: ENC[AES256_GCM,data:MTo2RhMA1t3pEWaZBtsM,iv:yPS8SNUz7AjRX0ZNLdDXQQI8/bTB/Em3z1iv8VuZWgo=,tag:lYBZZnrq0fr+2Ll3yQsUCQ==,type:str]
@@ -36,8 +37,8 @@ sops:
             ZjkzSGxlT1R6VHNHNDVNb3hBVzNVZ3MKMtBhVS0FKr6NWqv9S6mSOhjCDIdO3uNz
             OS9Qh8tX5J/s1ZH6z3/DNLWKonA6mccm1kH7jNQe/+w4ozYxa4me9Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-17T20:10:22Z"
-    mac: ENC[AES256_GCM,data:J1brFvRB1B6DXE1IVVy+qiUAOzHjA0Gys5pLLIzwna8QcpekM6o+SqTUe/jAokMKMt4iKzA8MUwhTjgmjvSSIEsp7JO8RR877SoFw+6zy0kBFGe2vaBM0SbvMWlbZmdXj4qk9TRyIY9FOR321R9trAvA32ijNmfBSXRHHTxTJMY=,iv:zmkgLAFcRYzpH5yqXndBTedUEu7YJW0Kk1AaAcOOd8w=,tag:ECNA2kiqabJni9iHsdTyGQ==,type:str]
+    lastmodified: "2024-11-08T17:28:41Z"
+    mac: ENC[AES256_GCM,data:com5x3LVyvpDxc9zvG8X/s+t2RZrbkUpU1uRYL+83J7PFZ1lEnO+B1ZMuufIp8OVtlw2ZA7BLroDaHk59uRL5DQK76gjOgAwtRXLGtkF54xVzYrMYN5+9ds2GHdGVoQwluYyIRTBP49ygtYpJB32Uf0G6im/st5rns0r57YqJd8=,iv:RjQPoP6e47GSgxJ63k9QS3ekrFktn80KwQgJEHhvnG4=,tag:5rd/mfqVQ/+0lmb9mDc7BQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+    version: 3.9.1
