feat: add etcd storage to utility cluster

--- a/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
@@ -305,7 +305,8 @@ spec:
           # renovate: depName="etcd"
           gnetId: 22236
           revision: 1
-          datasource: Prometheus
+          datasource:
+            - { name: DS_VICTORIAMETRICS, value: Prometheus }
         ceph-cluster:
           # renovate: depName="Ceph Cluster"
           gnetId: 2842
