--- a/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
@@ -82,6 +82,14 @@ spec:
             editable: true
             options:
               path: /var/lib/grafana/dashboards/default
+          - name: custom
+            orgId: 1
+            folder: custom
+            type: file
+            disableDeletion: false
+            editable: true
+            options:
+              path: /var/lib/grafana/dashboards/custom
     datasources:
       datasources.yaml:
         apiVersion: 1
@@ -212,6 +220,13 @@ spec:
           datasource:
             - { name: DS_PROMETHEUS, value: Prometheus }
             - { name: VAR_REPLICATIONDESTNAME, value: '.*-bootstrap'}
+      custom:
+        etcd-storage:
+          # renovate: depName="etcd"
+          gnetId: 22236
+          revision: 1
+          datasource:
+            - { name: DS_VICTORIAMETRICS, value: Prometheus }
     sidecar:
       dashboards:
         enabled: true
