--- a/kubernetes/utility/apps/network/cloudflare-ddns/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/cloudflare-ddns/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
           app:
             image:
               repository: ghcr.io/larivierec/cloudflare-ddns
-              tag: main@sha256:474575c7481e8d5c1e08b44aa739ac6d812db415a47c77f4eb1999f28c36c490
+              tag: v1.0.1@sha256:fc94db44ed58c1883da9528192ee7b097ce3c275c0e2cded902260eabb1b2cd1
             args:
               - --zone-name
               - ${SECRET_DOMAIN}
